<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_boot_camp">Hello Boot Camp!</string>
    <string name="increment">Increment</string>
    <string name="zero">zero</string>
    <string name="unclicked">unClicked</string>
    <string name="search">Search</string>
    <string name="city_name">City Name</string>
    <string name="favorite_cities">Favorite Cities</string>
    <string name="country">country</string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="show_city">Show</string>
    <string name="favorite">Favorite</string>
    <string name="error_image">Error Image</string>
    <string name="empty_list_msg">No Favorites \n\n Add some</string>
    <string name="undo_string">undo</string>
    <string name="cloudiness">Cloudiness :</string>
    <string name="degree">Degree :</string>
    <string name="speed">Speed :</string>
    <string name="temperature">Temperature :</string>
    <string name="min_tmp">Min Tmp :</string>
    <string name="max_tmp">Max Tmp :</string>
    <string name="wind">Wind</string>

</resources>
