<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteY="178dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_forecast"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt_cloudiness2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cloudiness"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/txt_temperature"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txt_date"
            app:layout_constraintTop_toTopOf="@+id/txt_date" />

        <TextView
            android:id="@+id/txt_degree2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/degree"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/txt_degree"
            app:layout_constraintTop_toTopOf="@+id/txt_degree" />

        <TextView
            android:id="@+id/txt_Speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_degree"
            app:layout_constraintTop_toBottomOf="@+id/txt_degree"
            tools:text="Speed" />

        <TextView
            android:id="@+id/txt_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/txt_wind"
            app:layout_constraintTop_toBottomOf="@+id/txt_wind"
            tools:text="degree" />

        <TextView
            android:id="@+id/txt_Speed2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/speed"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/txt_degree2"
            app:layout_constraintTop_toBottomOf="@+id/txt_degree2" />

        <TextView
            android:id="@+id/txt_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/txt_temperature2"
            app:layout_constraintTop_toTopOf="@+id/txt_temperature2"
            tools:text="temperature" />

        <TextView
            android:id="@+id/txt_min_tmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/txt_max_tmp"
            app:layout_constraintTop_toTopOf="@+id/txt_min_tmp2"
            tools:text="Min Tmp" />

        <TextView
            android:id="@+id/txt_max_tmp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/max_tmp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/txt_temperature2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/txt_temperature2"
            app:layout_constraintTop_toBottomOf="@+id/txt_temperature2" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txt_weather3"
            app:layout_constraintStart_toStartOf="@+id/txt_weather3"
            app:layout_constraintTop_toBottomOf="@+id/txt_weather3"
            tools:text="Date" />

        <TextView
            android:id="@+id/txt_weather3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Weather :" />

        <TextView
            android:id="@+id/txt_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_weather3"
            app:layout_constraintTop_toTopOf="@+id/txt_weather3"
            tools:text="Weather" />

        <TextView
            android:id="@+id/txt_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toEndOf="@+id/txt_temperature"
            app:layout_constraintTop_toTopOf="@+id/txt_temperature"
            tools:text="Wind" />

        <TextView
            android:id="@+id/txt_temperature2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/temperature"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txt_date"
            app:layout_constraintTop_toBottomOf="@+id/txt_date" />

        <TextView
            android:id="@+id/txt_max_tmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/txt_temperature"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_temperature"
            app:layout_constraintTop_toTopOf="@+id/txt_max_tmp2"
            tools:text="Max Tmp" />

        <TextView
            android:id="@+id/txt_min_tmp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/min_tmp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_max_tmp2"
            app:layout_constraintTop_toBottomOf="@+id/txt_max_tmp2" />

        <TextView
            android:id="@+id/txt_cloudiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/txt_cloudiness2"
            app:layout_constraintTop_toTopOf="@+id/txt_cloudiness2"
            tools:text="Cloudiness " />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
